# ROI-magic

./: README.md  SECURITY.md
DevIdea/: pyproject.toml
DevIdea/assets/: styles.css
DevIdea/attached_assets/: Pasted-Certainly-Here-s-a-more-detailed-breakdown-of-the-core-terms-and-concepts-relevant-to-the-developme-1741462980746.txt
DevIdea/modules/: market_analysis.py  roi_calculator.py
DevIdea/pages/: auth.py
DevIdea/utils/: ai_insights.py  auth.py
roi-magic/: main.py
roi-magic/attached_assets/: Pasted-Creating-a-core-development-document-is-essential-for-guiding-the-development-of-your-Streamlit-base-1741462944175.txt  Pasted-Okay-here-s-the-brief-problem-statement-and-solution-followed-by-a-more-detailed-explanation-P-1741462973211.txt
roi-magic/modules/: investment_comparison.py
roi-magic/utils/: calculations.py  data_generator.py  database.py
